--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -263,12 +263,15 @@ ul.project_list li {
   width: 25rem;
   height: 15.45rem;
   border-radius: 25px;
-  box-shadow: 4px 4px 16px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 4px 4px 16px 4px rgba(0, 0, 0, 0.2);
   margin-right: 2rem;
   filter: brightness(0.5) grayscale(0.9);
   opacity: 0.8;
   cursor: pointer;
   transition: all 0.4s ease-out;
+}
+ul.project_list li:hover {
+  box-shadow: 4px 4px 16px 7px rgba(0, 0, 0, 0.3);
 }
 ul.project_list li.selected {
   box-shadow: 0 0 0 5px #FF9900 inset;
@@ -383,160 +386,216 @@ div.pj_bg_text #pbt_1 {
 }
 
 #over_layer {
-  width: 90vw;
-  height: 90vh;
-  background: white;
+  width: 100%;
+  height: 100%;
+  background: transparent;
   position: fixed;
-  left: 5vw;
-  top: 5vh;
+  left: 0;
+  top: 0;
   z-index: 200;
 }
 
 #detail_content_wrapper {
   width: 100%;
   height: auto;
-  position: relative;
-  left: 0;
-  top: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 button#ol_close_btn {
-  width: auto;
-  height: auto;
+  width: 30px;
+  height: 30px;
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 20px;
+  z-index: 100;
   border: 0;
   background-color: transparent;
-  border: solid 2px #003CFF;
+  cursor: pointer;
   border-radius: 50%;
   box-sizing: border-box;
-  background: white;
+}
+@media screen and (max-width: 486px) {
+  button#ol_close_btn {
+    right: -10px;
+    top: -40px;
+  }
 }
 button#ol_close_btn i {
   font-size: 20px;
   color: #003CFF;
 }
-
-#detail_content {
-  width: 100%;
-  height: 2000px;
+@media screen and (max-width: 486px) {
+  button#ol_close_btn i {
+    color: rgb(255, 255, 255);
+  }
 }
 
-.blog-slider {
+.detail-slider__button {
+  border-radius: 50px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 10px;
+  padding: 15px 35px;
+  background: linear-gradient(147deg, #f90 0%, #003cff 74%);
+  box-shadow: 0px 14px 50px rgba(0, 65, 255, 0.4);
+  color: #fff;
+  font: 500 1rem "Noto sans KR";
+  letter-spacing: 1px;
+  transition: all 0.2s ease-out;
+}
+.detail-slider__button:hover {
+  background: #003CFF;
+  cursor: pointer;
+}
+@media screen and (max-width: 576px) {
+  .detail-slider__button {
+    width: 100%;
+  }
+}
+
+#detail_content {
+  width: auto;
+  height: auto;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
+}
+
+.swiper-wrapper {
+  overflow: hidden;
+}
+
+.detail-slider {
   width: 95%;
   position: relative;
-  max-width: 800px;
+  left: 0;
+  top: 0;
+  max-width: 1000px;
   margin: auto;
   background: #fff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 25px;
   border-radius: 25px;
-  height: 400px;
+  height: 600px;
   transition: all 0.3s;
 }
 @media screen and (max-width: 992px) {
-  .blog-slider {
-    max-width: 680px;
-    height: 400px;
+  .detail-slider {
+    width: 70%;
+    height: 80%;
   }
 }
 @media screen and (max-width: 768px) {
-  .blog-slider {
+  .detail-slider {
     min-height: 500px;
     height: auto;
-    margin: 180px auto;
+    top: 2rem;
+    text-align: center;
+    width: 78%;
   }
 }
 @media screen and (max-height: 500px) and (min-width: 992px) {
-  .blog-slider {
+  .detail-slider {
     height: 350px;
   }
 }
-.blog-slider__item {
+.detail-slider__item {
   display: flex;
   align-items: center;
 }
 @media screen and (max-width: 768px) {
-  .blog-slider__item {
+  .detail-slider__item {
     flex-direction: column;
   }
 }
-.blog-slider__item.swiper-slide-active .blog-slider__img img {
+.detail-slider__item.swiper-slide-active .detail-slider__img img {
   opacity: 1;
   transition-delay: 0.3s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > * {
+.detail-slider__item.swiper-slide-active .detail-slider__content > * {
   opacity: 1;
   transform: none;
+  font-family: "Noto sans KR";
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(1) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(1) {
   transition-delay: 0.3s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(2) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(2) {
   transition-delay: 0.4s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(3) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(3) {
   transition-delay: 0.5s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(4) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(4) {
   transition-delay: 0.6s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(5) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(5) {
   transition-delay: 0.7s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(6) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(6) {
   transition-delay: 0.8s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(7) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(7) {
   transition-delay: 0.9s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(8) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(8) {
   transition-delay: 1s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(9) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(9) {
   transition-delay: 1.1s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(10) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(10) {
   transition-delay: 1.2s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(11) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(11) {
   transition-delay: 1.3s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(12) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(12) {
   transition-delay: 1.4s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(13) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(13) {
   transition-delay: 1.5s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(14) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(14) {
   transition-delay: 1.6s;
 }
-.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(15) {
+.detail-slider__item.swiper-slide-active .detail-slider__content > *:nth-child(15) {
   transition-delay: 1.7s;
 }
-.blog-slider__img {
-  width: 300px;
+.detail-slider__img {
+  width: 70%;
   flex-shrink: 0;
   height: 300px;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
+  box-shadow: 4px 13px 20px 1px rgba(56, 82, 252, 0.2);
   border-radius: 20px;
-  transform: translateX(-80px);
+  transform: translateX(0px);
   overflow: hidden;
 }
-.blog-slider__img:after {
+@media screen and (max-width: 486px) {
+  .detail-slider__img {
+    height: 250px;
+  }
+}
+.detail-slider__img:after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
   border-radius: 20px;
   opacity: 0.8;
 }
-.blog-slider__img img {
+.detail-slider__img img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -547,94 +606,86 @@ button#ol_close_btn i {
   transition: all 0.3s;
 }
 @media screen and (max-width: 768px) {
-  .blog-slider__img {
-    transform: translateY(-50%);
+  .detail-slider__img {
+    transform: translateY(-40%);
     width: 90%;
+    margin-left: 5%;
   }
 }
 @media screen and (max-width: 576px) {
-  .blog-slider__img {
+  .detail-slider__img {
     width: 95%;
+    margin-left: 2.5%;
   }
 }
 @media screen and (max-height: 500px) and (min-width: 992px) {
-  .blog-slider__img {
+  .detail-slider__img {
     height: 270px;
   }
 }
-.blog-slider__content {
+@media screen and (max-width: 486px) {
+  .detail-slider__img {
+    margin-top: 30px;
+  }
+}
+.detail-slider__content {
   padding-right: 25px;
+  border: solid 2px palevioletred;
+  box-sizing: border-box;
+  margin-top: 40px;
 }
 @media screen and (max-width: 768px) {
-  .blog-slider__content {
+  .detail-slider__content {
     margin-top: -80px;
     text-align: center;
     padding: 0 30px;
   }
 }
 @media screen and (max-width: 576px) {
-  .blog-slider__content {
-    padding: 0;
+  .detail-slider__content {
+    margin-top: -70px;
+    padding: 0 30px;
   }
 }
-.blog-slider__content > * {
+.detail-slider__content > * {
   opacity: 0;
   transform: translateY(25px);
   transition: all 0.4s;
 }
-.blog-slider__code {
+.detail-slider__code {
   color: #7b7992;
   margin-bottom: 15px;
   display: block;
   font-weight: 500;
 }
-.blog-slider__title {
+.detail-slider__title {
   font-size: 24px;
   font-weight: 700;
   color: #0d0925;
   margin-bottom: 20px;
 }
-.blog-slider__text {
+.detail-slider__text {
   color: #4e4a67;
   margin-bottom: 30px;
   line-height: 1.5em;
 }
-.blog-slider__button {
-  display: inline-flex;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  padding: 15px 35px;
-  border-radius: 50px;
-  color: #fff;
-  box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
-  text-decoration: none;
-  font-weight: 500;
-  justify-content: center;
-  text-align: center;
-  letter-spacing: 1px;
-}
-@media screen and (max-width: 576px) {
-  .blog-slider__button {
-    width: 100%;
-  }
-}
-.blog-slider .swiper-container-horizontal > .swiper-pagination-bullets, .blog-slider .swiper-pagination-custom, .blog-slider .swiper-pagination-fraction {
+.detail-slider .swiper-container-horizontal > .swiper-pagination-bullets, .detail-slider .swiper-pagination-custom, .detail-slider .swiper-pagination-fraction {
   bottom: 10px;
   left: 0;
   width: 100%;
 }
-.blog-slider__pagination {
+.detail-slider__pagination {
   position: absolute;
-  z-index: 21;
-  right: 20px;
-  width: 11px !important;
-  text-align: center;
   left: auto !important;
+  right: 20px;
+  text-align: center;
   top: 50%;
-  bottom: auto !important;
   transform: translateY(-50%);
+  width: 11px !important;
+  z-index: 21;
 }
 @media screen and (max-width: 768px) {
-  .blog-slider__pagination {
+  .detail-slider__pagination {
     transform: translateX(-50%);
     left: 50% !important;
     top: 205px;
@@ -644,15 +695,15 @@ button#ol_close_btn i {
     align-items: center;
   }
 }
-.blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 8px 0;
+.detail-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 4px 0 !important;
 }
 @media screen and (max-width: 768px) {
-  .blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
-    margin: 0 5px;
+  .detail-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 3px !important;
   }
 }
-.blog-slider__pagination .swiper-pagination-bullet {
+.detail-slider__pagination .swiper-pagination-bullet {
   width: 11px;
   height: 11px;
   display: block;
@@ -661,14 +712,14 @@ button#ol_close_btn i {
   opacity: 0.2;
   transition: all 0.3s;
 }
-.blog-slider__pagination .swiper-pagination-bullet-active {
+.detail-slider__pagination .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #fd3838;
+  background: #003CFF;
   height: 30px;
-  box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+  box-shadow: 0px 0px 20px rgba(56, 69, 252, 0.3);
 }
 @media screen and (max-width: 768px) {
-  .blog-slider__pagination .swiper-pagination-bullet-active {
+  .detail-slider__pagination .swiper-pagination-bullet-active {
     height: 11px;
     width: 30px;
   }
