--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -232,12 +232,15 @@ ul.project_list {
     width: 25rem;
     height: 15.45rem;
     border-radius: 25px;
-    box-shadow: 4px 4px 16px 5px rgba(0, 0, 0, 0.20);
+    box-shadow: 4px 4px 16px 4px rgba(0, 0, 0, 0.2);
     margin-right: 2rem;
     filter: brightness(0.5) grayscale(0.9);
     opacity: 0.8;
     cursor: pointer;
     transition: all 0.4s ease-out;
+    &:hover {
+      box-shadow: 4px 4px 16px 7px rgba(0, 0, 0, 0.3);
+    }
     &.selected {
       box-shadow: 0 0 0 5px #FF9900 inset; 
       filter: brightness(1) grayscale(0);
@@ -347,275 +350,301 @@ div.pj_bg_text {
   z-index: 100;
 }
 
+
+// detail content
 #over_layer {
-  width: 90vw;
-  height: 90vh;
-  background: white;
+  width: 100%;
+  height: 100%;
+  background: transparent;
   position: fixed;
-  left: 5vw;
-  top: 5vh;
+  left: 0;
+  top: 0;
   z-index: 200;
 }
 
 #detail_content_wrapper {
   width: 100%;
   height: auto;
-  position: relative;
-  left: 0;
-  top: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 button#ol_close_btn {
-  width: auto;
-  height: auto;
+  width: 30px;
+  height: 30px;
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 20px;
+  @media screen and (max-width: 486px) {
+    right: -10px;
+    top: -40px;
+    // background: #ffffff;
+    // box-shadow: inset 0 0 15px rgba(33, 84, 203, 0.463);
+  }
+  z-index: 100;
   border: 0;
   background-color: transparent;
+  cursor: pointer;
   i {
     font-size: 20px;
     color: #003CFF;
+    @media screen and (max-width: 486px) {
+      color: rgb(255, 255, 255);
+    }
+
   }
-  border: solid 2px #003CFF;
+
   border-radius: 50%;
   box-sizing: border-box;
-  background: white;
+}
+
+
+.detail-slider__button {
+  border-radius: 50px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 10px;
+  padding: 15px 35px;
+  // box-sizing: border-box;
+  background: linear-gradient(147deg, #f90 0%, #003cff 74%);
+
+  box-shadow: 0px 14px 50px rgba(0, 65, 255, 0.4);
+  color: #fff;
+  font: 500 1rem "Noto sans KR";
+  letter-spacing: 1px;
+  transition: all 0.2s ease-out;
+  &:hover {
+    background: #003CFF;
+    cursor: pointer;
+  }
+  @media screen and (max-width: 576px) {
+    width: 100%;
+  }
 }
 
 #detail_content {
-  width: 100%;
-  height: 2000px;
+  width: auto;
+  height: auto;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
+}
+.swiper-wrapper {
+  overflow: hidden;
 }
 
-.blog-slider {
+.detail-slider {
   width: 95%;
-position: relative;
-  max-width: 800px;
+  position: relative;
+  left: 0;
+  top: 0;
+  max-width: 1000px;
   margin: auto;
   background: #fff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 25px;
   border-radius: 25px;
-  height: 400px;
-transition: all .3s;
-
- 
-@media screen and (max-width: 992px) {
-  max-width: 680px;
-      height: 400px;
-}
-
-@media screen and (max-width: 768px) {
-  min-height: 500px;
-  height: auto;
-  margin: 180px auto;
-}
-
-
-@media screen and (max-height: 500px) and (min-width: 992px) {
-      height: 350px;
-}
-
-&__item {
-  display: flex;
-  align-items: center;
+  height: 600px;
+  transition: all .3s;
   
-@media screen and (max-width: 768px) {
-  flex-direction: column;
-}
-  
-  &.swiper-slide-active {
-    .blog-slider__img {
-      img {
-        opacity: 1;
-      transition-delay: .3s;
-      }
-    }
-    .blog-slider__content {
-      > * {
+  @media screen and (max-width: 992px) {
+    // max-width: 680px;
+    width: 70%;
+    height: 80%;
+  }
+  @media screen and (max-width: 768px) {
+    min-height: 500px;
+    height: auto;
+    // margin: 180px auto;
+    top: 2rem;
+    text-align: center;
+    width: 78%;
+  }
+  @media screen and (max-height: 500px) and (min-width: 992px) {
+    height: 350px;
+  }
+  &__item {
+    display: flex;
+    align-items: center;
     
-      opacity: 1;
-      transform: none;
-
-    @for $i from 0 to 15 {
-      &:nth-child(#{$i + 1}) {
-        transition-delay: $i * 0.1 + 0.3s;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+    &.swiper-slide-active {
+      .detail-slider__img {
+        img {
+          opacity: 1;
+          transition-delay: .3s;
+        }
+      }
+      .detail-slider__content {
+        > * {
+        opacity: 1;
+        transform: none;
+        font-family: "Noto sans KR";
+        @for $i from 0 to 15 {
+          &:nth-child(#{$i + 1}) {
+            transition-delay: $i * 0.1 + 0.3s;
+          }
+        }
       }
     }
-
   }
-    }
-  }
-  
 }
 
 &__img {
-   // width: 40%;
-  width: 300px;
+  width: 70%;
+  // width: 300px;
   flex-shrink: 0;
   height: 300px;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
+  box-shadow: 4px 13px 20px 1px rgba(56, 82, 252, 0.2);
   border-radius: 20px;
-  transform: translateX(-80px);
- 
+  transform: translateX(0px);
   overflow: hidden;
+  @media screen and (max-width: 486px) {
+    height: 250px;
+  }
   
   &:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-    border-radius: 20px;
-  opacity: 0.8;
-}
-  
-  img {
-    width: 100%;
-  height: 100%;
-  object-fit: cover;
-    display: block;
-     opacity: 0;
-    border-radius: 20px;
-  transition: all .3s;
-  }
-  
-  
-  @media screen and (max-width: 992px) {
-    // width: 45%;
-  }
-  @media screen and (max-width: 768px) {
-  transform: translateY(-50%);
-    width: 90%;
-}
-  @media screen and (max-width: 576px) {
-    width: 95%;
-  }
-   @media screen and (max-height: 500px) and (min-width: 992px) {
+    content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
+      border-radius: 20px;
+      opacity: 0.8;
+    }
+    
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      opacity: 0;
+      border-radius: 20px;
+      transition: all .3s;
+    }
+
+    @media screen and (max-width: 768px) {
+      transform: translateY(-40%);
+      width: 90%;
+      margin-left: 5%;
+    }
+    @media screen and (max-width: 576px) {
+      width: 95%;
+      margin-left: 2.5%;
+    }
+    @media screen and (max-height: 500px) and (min-width: 992px) {
       height: 270px;
-}
-}
+    }
+    @media screen and (max-width: 486px) {
+      margin-top: 30px;
+    }
+  }
 
-&__content {
-  // width: 60%;
-  padding-right: 25px;
-  @media screen and (max-width: 992px) {
-    // width: 55%;
-  }
-  @media screen and (max-width: 768px) {
-        margin-top: -80px;
-  text-align: center;
-  padding: 0 30px;
-  }
-  
-  @media screen and (max-width: 576px) {
-    padding: 0
-  }
-  > * {
-    opacity: 0;
-    transform: translateY(25px);
-    transition: all .4s;
-    
-    
-  }
-  
-}
-
-&__code {
-  color: #7b7992;
-  margin-bottom: 15px;
-  display: block;
-  font-weight: 500;
-}
-
-&__title {
-  font-size: 24px;
-  font-weight: 700;
-  color: #0d0925;
-  margin-bottom: 20px;
-}
-
-&__text {
-  color: #4e4a67;
-  margin-bottom: 30px;
-  line-height: 1.5em;
-}
-
-&__button {
-      display: inline-flex;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  padding: 15px 35px;
-  border-radius: 50px;
-  color: #fff;
-  box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
-  text-decoration: none;
-  font-weight: 500;
-      justify-content: center;
-  text-align: center;
-  letter-spacing: 1px;
-  @media screen and (max-width: 576px) {
-    width: 100%;
-  }
-  
-}
-.swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
-  bottom: 10px;
-  left: 0;
-  width: 100%;
-  
-}
-&__pagination {
- position: absolute;
-  z-index: 21;
-  right: 20px;
-  width: 11px!important;
-  text-align: center;
-  left: auto!important;
-  top: 50%;
-  bottom: auto!important;
-  transform: translateY(-50%);
-  @media screen and (max-width: 768px) {
-   transform: translateX(-50%);
-        left: 50%!important;
-    top: 205px;
-  width: 100%!important;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  }
-   &.swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 8px 0;
-     @media screen and (max-width: 768px) {
-       margin: 0 5px;
-     }
-}
-  
-  .swiper-pagination-bullet {
-  width: 11px;
-  height: 11px;
-  display: block;
-  border-radius: 10px;
-  background: #062744;
-  opacity: 0.2;
-    transition: all .3s;
-    &-active {
-  opacity: 1;
-  background: #fd3838;
-  height: 30px;
-  box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+  &__content {
+    padding-right: 25px;
+    border: solid 2px palevioletred;
+    box-sizing: border-box;
+    margin-top: 40px;
+    @media screen and (max-width: 768px) {
+      margin-top: -80px;
+      text-align: center;
+      padding: 0 30px;
+    }
+    @media screen and (max-width: 576px) {
+      margin-top: -70px;
+      padding: 0 30px;
+    }
+    > * {
+      opacity: 0;
+      transform: translateY(25px);
+      transition: all .4s;
       
-      @media screen and (max-width: 768px) {
-        height: 11px;
-        width: 30px;
-      }
-}
-}
-  
-}
+      
+    }
+    
+  }
 
+  &__code {
+    color: #7b7992;
+    margin-bottom: 15px;
+    display: block;
+    font-weight: 500;
+  }
+
+  &__title {
+    font-size: 24px;
+    font-weight: 700;
+    color: #0d0925;
+    margin-bottom: 20px;
+  }
+
+  &__text {
+    color: #4e4a67;
+    margin-bottom: 30px;
+    line-height: 1.5em;
+  }
+  
+  .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+    
+  }
+  &__pagination {
+    position: absolute;
+    left: auto !important;
+    right: 20px;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+    // bottom: auto !important;
+    width: 11px !important;
+    z-index: 21;
+    @media screen and (max-width: 768px) {
+      transform: translateX(-50%);
+      left: 50%!important;
+      top: 205px;
+      width: 100%!important;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    &.swiper-pagination-bullets .swiper-pagination-bullet {
+      margin: 4px 0 !important;
+      @media screen and (max-width: 768px) {
+        margin: 0 3px !important;
+      }
+    }
+    .swiper-pagination-bullet {
+      width: 11px;
+      height: 11px;
+      display: block;
+      border-radius: 10px;
+      background: #062744;
+      opacity: 0.2;
+      transition: all .3s;
+      &-active {
+        opacity: 1;
+        background: #003CFF;
+        height: 30px;
+        box-shadow: 0px 0px 20px rgba(56, 69, 252, 0.3);
+        @media screen and (max-width: 768px) {
+          height: 11px;
+          width: 30px;
+        }
+      }
+    }
+  }
 }
 
